--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "react-force-graph-2d": "^1.25.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
