--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
+    "firebase": "^10.13.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
